fix scrollbar for wizard modal

--- a/static/src/index.css
+++ b/static/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.modal-open {
+  overflow-y: hidden
+}
